#CHANGELOG
## 29/12/2023:
-Created the repo and made the initial files. -Mourad

## 30/12/2023:
-Added very simple home with one button. -Mourad
-Added login page and the support page. -Mourad
-Downloaded LARAVEL MIX but not used it. -Mourad

## 31/12/2023:
-Changed env database from laravel to fst -Mourad
-Added images folder in public, changed home.blade.php and added home.css and home.js - Mourad
-Remove support page and merged it with the login page -Mourad

## 02/01/2024:
-Removed stuff from the database and recreated it using migration, added timestamp to the table -Mourad
-Made login connected with the database, still having issues redirecting it to the desired pages -Mourad

## 03/01/2024:
-Create all the dashboards and linked all the routes to the upgraded DashboardController -Mourad

## 13/01/2024:
-Added all the dashboards, one is fully working, needs back-end linkage now.
-Added profile page, working for all dashboards when clicking the name(It should get its data from the database -Not done yet)

## 21/01/2024:
-CHanged all dashboards php files, added all the necessary tables for the dababase 
-Changed the content of the tables and added new users
-Changed Etudiant.css
-Added all table models